# Tracer-Challenge

./: CMakeLists.txt  main.cpp
Test/: CanvasTest.cpp  MatrixTest.cpp  RayTest.cpp  TransformationTest.cpp  TupleTest.cpp  catch.hpp  test_main.cpp
src/Canvas/: Color.cpp  Color.h
src/Primitives/: Matrix.cpp  Matrix.h  Tuple.cpp  Tuple.h
src/Primitives/Include/: Matrix.h  Tuple.h  dimension_error.h
src/Primitives/Source/: Matrix.cpp  Tuple.cpp  dimension_error.cpp
src/Render/: Canvas.cpp  Color.cpp  Color.h
src/Render/Include/: Canvas.h  Collision.h  Color.h  Ray.h
src/Render/Source/: Canvas.cpp  Collision.cpp  Color.cpp  Ray.cpp
src/Simulation/: Environment.cpp  Environment.h  Projectile.cpp  Projectile.h
src/Simulation/Include/: Entity.h  Environment.h  Projectile.h  Sphere.h
src/Simulation/Source/: Entity.cpp  Environment.cpp  Projectile.cpp  Sphere.cpp
